<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MoveActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relatif1"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:background="#ffffff">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="SEPATU CANTIK"
            android:textSize="32dp"
            android:textAlignment="center"/>
        </LinearLayout>


    </RelativeLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skrol1"
                android:layout_below="@id/relatif1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24dp"
                        android:text="@string/sepatu1"/>
                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp1"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp5"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp6"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp7"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp8"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp9"/>

                        </LinearLayout>
                    </HorizontalScrollView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Rp 100.000,-"
                        android:textSize="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teks1"
                        android:textSize="14dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teks2"
                        android:textSize="12dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24dp"
                        android:text="@string/sepatu2"/>
                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/kt1"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/kt2"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/kt3"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/kt4"/>

                        </LinearLayout>
                    </HorizontalScrollView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Rp 120.000,-"
                        android:textSize="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teks3"
                        android:textSize="14dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24dp"
                        android:text="@string/sepatu3"/>
                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp2"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp3"/>
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/sp4"/>
                        </LinearLayout>
                    </HorizontalScrollView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Rp 150.000,-"
                        android:textSize="20dp"/>

                </LinearLayout>
            </ScrollView>



</RelativeLayout>